! Provide a bit more space to prevent overlong message titles overflowing onto the sticky/locked bg icons.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2968,6 +2968,9 @@ tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td {
 .topic_table td.locked_sticky2, .topic_table td.stickybglockedbg2 {
 	background: #e8d8cf url(../images/icons/quick_sticky_lock.png) no-repeat 98% 4px;
 }
+.message_index_title {
+	margin-right: 40px;
+}
 
 /* Plain locked topics just get the icon. */
 /* Nobody wants them to stand out much. */
